@@ -61,6 +61,8 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
         private final Map<Area, Set<LfBus>> areaBusMap = new HashMap<>();
 
         private final Map<Area, Set<LfArea.Boundary>> areaBoundaries = new HashMap<>();
+
+        private final Set<DcLine> dcLineSet = new LinkedHashSet<>();
     }
 
     private final Supplier<List<LfNetworkLoaderPostProcessor>> postProcessorsSupplier;
@@ -80,6 +82,20 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
             postProcessors.forEach(pp -> pp.onBusAdded(bus, lfBus));
             lfNetwork.addBus(lfBus);
             lfBuses.add(lfBus);
+        }
+    }
+
+    private static void createDcNodes(List<DcNode> dcNodes, LfNetworkParameters parameters, LfNetwork lfNetwork, List<LfDcNode> lfDcNodes, LoadingContext loadingContext) {
+        for (DcNode dcNode : dcNodes) {
+            LfDcNodeImpl lfDcNode = createDcNode(dcNode, parameters, lfNetwork, loadingContext);
+            lfNetwork.addDcNode(lfDcNode);
+            lfDcNodes.add(lfDcNode);
+        }
+    }
+
+    private static void createDcGrounds(LfNetwork lfNetwork, List<DcGround> dcGrounds) {
+        for (DcGround dcGround : dcGrounds) {
+            Objects.requireNonNull(getLfDcNode(dcGround.getDcTerminal(), lfNetwork)).setGround(true);
         }
     }
 
@@ -466,6 +482,17 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
         return lfBus;
     }
 
+    private static LfDcNodeImpl createDcNode(DcNode dcNode, LfNetworkParameters parameters, LfNetwork lfNetwork, LoadingContext loadingContext) {
+        LfDcNodeImpl lfDcNode = LfDcNodeImpl.create(dcNode, lfNetwork, parameters);
+        dcNode.visitConnectedEquipments(new DcTopologyVisitor() {
+            @Override
+            public void visitDcLine(DcLine dcLine, TwoSides sides) {
+                loadingContext.dcLineSet.add(dcLine);
+            }
+        });
+        return lfDcNode;
+    }
+
     private static void addBranch(LfNetwork lfNetwork, LfBranch lfBranch, LfNetworkLoadingReport report) {
         boolean connectedToSameBus = lfBranch.getBus1() == lfBranch.getBus2();
         if (connectedToSameBus) {
@@ -478,6 +505,19 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
             }
             lfNetwork.addBranch(lfBranch);
         }
+    }
+
+    private static void addDcLine(LfNetwork lfNetwork, LfDcLine lfDcLine) {
+        boolean connectedToSameDcNode = lfDcLine.getDcNode1() == lfDcLine.getDcNode2();
+        if (connectedToSameDcNode) {
+            LOGGER.trace("Discard dcLine '{}' because connected to same dcNode at both ends", lfDcLine.getId());
+        } else {
+            lfNetwork.addDcLine(lfDcLine);
+        }
+    }
+
+    private static void addVoltageSourceConverter(LfNetwork lfNetwork, LfVoltageSourceConverter voltageSourceConverter) {
+        lfNetwork.addVoltageSourceConverter(voltageSourceConverter);
     }
 
     private static void createBranches(List<LfBus> lfBuses, LfNetwork lfNetwork, LfTopoConfig topoConfig, LoadingContext loadingContext,
@@ -562,6 +602,30 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
                 lfNetwork.addHvdc(lfHvdc);
             } else {
                 LOGGER.debug("The converter stations of hvdc line {} are not in the same synchronous component: no hvdc link created to model active power flow.", hvdcLine.getId());
+            }
+        }
+    }
+
+    private static void createDcLines(LfNetwork lfNetwork, LoadingContext loadingContext, LfNetworkParameters parameters) {
+        for (DcLine dcLine : loadingContext.dcLineSet) {
+            LfDcNode lfDcNode1 = getLfDcNode(dcLine.getDcTerminal1(), lfNetwork);
+            LfDcNode lfDcNode2 = getLfDcNode(dcLine.getDcTerminal2(), lfNetwork);
+            LfDcLineImpl lfDcLine = LfDcLineImpl.create(dcLine, lfNetwork, lfDcNode1, lfDcNode2, parameters);
+            addDcLine(lfNetwork, lfDcLine);
+        }
+    }
+
+    private static void createAcDcConverters(List<AcDcConverter<?>> acDcConverters, LfNetwork lfNetwork, LfNetworkParameters parameters) {
+        for (AcDcConverter<?> acDcConverter : acDcConverters) {
+            LfBus lfBus1 = getLfBus(acDcConverter.getTerminal1(), lfNetwork, parameters.isBreakers());
+            if (lfBus1 != null) {
+                LfDcNode lfDcNode1 = getLfDcNode(acDcConverter.getDcTerminal1(), lfNetwork);
+                LfDcNode lfDcNode2 = getLfDcNode(acDcConverter.getDcTerminal2(), lfNetwork);
+                if (acDcConverter instanceof VoltageSourceConverter voltageSourceConverter) {
+                    LfVoltageSourceConverterImpl voltageSourceConverterImpl = LfVoltageSourceConverterImpl.create(voltageSourceConverter, lfNetwork, lfDcNode1, lfDcNode2, lfBus1, parameters);
+                    addVoltageSourceConverter(lfNetwork, voltageSourceConverterImpl);
+                }
+                //lcc converter not implemented yet
             }
         }
     }
@@ -952,7 +1016,12 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
         return bus != null ? lfNetwork.getBusById(bus.getId()) : null;
     }
 
-    private LfNetwork create(int numCC, int numSC, Network network, List<Bus> buses, List<Switch> switches, LfTopoConfig topoConfig, LfNetworkParameters parameters, ReportNode reportNode) {
+    private static LfDcNode getLfDcNode(DcTerminal terminal, LfNetwork lfNetwork) {
+        DcNode dcNode = Networks.getDcNode(terminal);
+        return dcNode != null ? lfNetwork.getDcNodeById(dcNode.getId()) : null;
+    }
+
+    private LfNetwork createAc(int numCC, int numSC, Network network, List<Bus> buses, List<Switch> switches, LfTopoConfig topoConfig, LfNetworkParameters parameters, ReportNode reportNode) {
         LfNetwork lfNetwork = new LfNetwork(numCC, numSC, parameters.getSlackBusSelector(), parameters.getMaxSlackBusCount(),
                 parameters.getConnectivityFactory(), parameters.getReferenceBusSelector(), reportNode);
 
@@ -1102,6 +1171,36 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
 
         postProcessors.forEach(pp -> pp.onLfNetworkLoaded(network, lfNetwork));
         return lfNetwork;
+    }
+
+    private LfNetwork createDc(int numCC, int numSC, Network network, List<DcBus> dcBuses, LfNetworkParameters parameters, ReportNode reportNode) {
+        LfNetwork lfNetwork = new LfNetwork(numCC, numSC, parameters.getSlackBusSelector(), parameters.getMaxSlackBusCount(),
+                parameters.getConnectivityFactory(), parameters.getReferenceBusSelector(), reportNode);
+
+        List<DcNode> dcNodes = new ArrayList<>();
+        dcBuses.forEach(bus -> bus.getDcNodes().forEach(dcNodes::add));
+        List<DcGround> dcGrounds = new ArrayList<>();
+        dcBuses.forEach(bus -> bus.getDcGrounds().forEach(dcGrounds::add));
+
+        LoadingContext loadingContext = new LoadingContext();
+        List<LfNetworkLoaderPostProcessor> postProcessors = postProcessorsSupplier.get().stream()
+                .filter(pp -> pp.getLoadingPolicy() == LfNetworkLoaderPostProcessor.LoadingPolicy.ALWAYS
+                        || pp.getLoadingPolicy() == LfNetworkLoaderPostProcessor.LoadingPolicy.SELECTION && parameters.getLoaderPostProcessorSelection().contains(pp.getName()))
+                .collect(Collectors.toList());
+
+        List<LfDcNode> lfDcNodes = new ArrayList<>();
+        createDcNodes(dcNodes, parameters, lfNetwork, lfDcNodes, loadingContext);
+        createDcGrounds(lfNetwork, dcGrounds);
+        createDcLines(lfNetwork, loadingContext, parameters);
+
+        postProcessors.forEach(pp -> pp.onLfNetworkLoaded(network, lfNetwork));
+        return lfNetwork;
+    }
+
+    private LfNetwork createAcDc(List<LfNetwork> acLfNetworks, List<LfNetwork> dcLfNetworks, List<AcDcConverter<?>> acDcConverters, LfNetworkParameters parameters) {
+        LfAcDcNetwork lfAcDcNetwork = new LfAcDcNetwork(acLfNetworks, dcLfNetworks);
+        createAcDcConverters(acDcConverters, lfAcDcNetwork, parameters);
+        return lfAcDcNetwork;
     }
 
     private static void checkControlZonesAreDisjoints(LfNetwork lfNetwork) {
@@ -1305,6 +1404,16 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
             }
         }
 
+        Map<Pair<Integer, Integer>, List<DcBus>> dcBusesByCc = new TreeMap<>();
+        Iterable<DcBus> dcBuses = Networks.getDcBuses(network);
+        for (DcBus dcBus : dcBuses) {
+            Component cc = dcBus.getConnectedComponent();
+            Component sc = dcBus.getDcComponent();
+            if (cc != null && sc != null) {
+                dcBusesByCc.computeIfAbsent(Pair.of(cc.getNum(), sc.getNum()), k -> new ArrayList<>()).add(dcBus);
+            }
+        }
+
         Map<Pair<Integer, Integer>, List<Switch>> switchesByCc = new HashMap<>();
         if (parameters.isBreakers()) {
             for (VoltageLevel vl : network.getVoltageLevels()) {
@@ -1327,28 +1436,75 @@ public class LfNetworkLoaderImpl implements LfNetworkLoader<Network> {
             case ALL_CONNECTED -> busesByCc.entrySet().stream();
         };
 
-        List<LfNetwork> lfNetworks = filteredBusesByComponentStream
+        List<LfNetwork> acLfNetworks = filteredBusesByComponentStream
                 .map(e -> {
                     var networkKey = e.getKey();
                     int numCc = networkKey.getLeft();
                     int numSc = networkKey.getRight();
                     List<Bus> lfBuses = e.getValue();
-                    return create(numCc, numSc, network, lfBuses, switchesByCc.get(networkKey), topoConfig,
+                    return createAc(numCc, numSc, network, lfBuses, switchesByCc.get(networkKey), topoConfig,
                             parameters, Reports.createRootLfNetworkReportNode(reportNode, numCc, numSc));
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        Stream<Map.Entry<Pair<Integer, Integer>, List<DcBus>>> filteredDcBusesByComponentStream = switch (parameters.getComponentMode()) {
+            case MAIN_CONNECTED -> dcBusesByCc.entrySet().stream().filter(e -> e.getKey().getLeft() == ComponentConstants.MAIN_NUM);
+            case MAIN_SYNCHRONOUS -> dcBusesByCc.entrySet().stream().filter(e -> e.getKey().getRight() == ComponentConstants.MAIN_NUM);
+            case ALL_CONNECTED -> dcBusesByCc.entrySet().stream();
+        };
+
+        List<LfNetwork> dcLfNetworks = filteredDcBusesByComponentStream
+                .map(e -> {
+                    var networkKey = e.getKey();
+                    int numCc = networkKey.getLeft();
+                    int numSc = networkKey.getRight();
+                    List<DcBus> lfDcBuses = e.getValue();
+                    return createDc(numCc, numSc, network, lfDcBuses,
+                            parameters, Reports.createRootLfNetworkReportNode(reportNode, numCc, numSc));
+                })
+                .toList();
+
+        Map<Integer, List<AcDcConverter<?>>> acDcConvertersByCc = new HashMap<>();
+        for (AcDcConverter<?> converter : network.getVoltageSourceConverters()) {
+            DcBus dcBus = converter.getDcTerminal1().getDcBus();
+            if (dcBus != null && dcBus.getConnectedComponent() != null) {
+                int ccNum = dcBus.getConnectedComponent().getNum();
+                acDcConvertersByCc.computeIfAbsent(ccNum, k -> new ArrayList<>()).add(converter);
+            }
+        }
 
         stopwatch.stop();
 
         LOGGER.debug(PERFORMANCE_MARKER, "LF networks created in {} ms", stopwatch.elapsed(TimeUnit.MILLISECONDS));
 
-        return lfNetworks;
+        if (!parameters.isAcDcNetwork()) {
+            return acLfNetworks;
+        } else {
+            Map<Integer, List<LfNetwork>> acNetworksByCc = acLfNetworks.stream()
+                    .collect(Collectors.groupingBy(LfNetwork::getNumCC));
+
+            Map<Integer, List<LfNetwork>> dcNetworksByCc = dcLfNetworks.stream()
+                    .collect(Collectors.groupingBy(LfNetwork::getNumCC));
+
+            Set<Integer> allCc = new HashSet<>();
+            allCc.addAll(acNetworksByCc.keySet());
+            allCc.addAll(dcNetworksByCc.keySet());
+
+            return allCc.stream()
+                    .map(numCc -> {
+                        List<LfNetwork> acPart = acNetworksByCc.getOrDefault(numCc, List.of());
+                        List<LfNetwork> dcPart = dcNetworksByCc.getOrDefault(numCc, List.of());
+                        List<AcDcConverter<?>> acDcConverters = acDcConvertersByCc.getOrDefault(numCc, List.of());
+                        return createAcDc(acPart, dcPart, acDcConverters, parameters);
+                    })
+                    .toList();
+        }
     }
 
     static boolean participateToSlackDistribution(LfNetworkParameters parameters, Bus b) {
         return parameters.getCountriesToBalance().isEmpty()
-               || b.getVoltageLevel().getSubstation().flatMap(Substation::getCountry)
-                   .map(country -> parameters.getCountriesToBalance().contains(country))
-                   .orElse(false);
+                || b.getVoltageLevel().getSubstation().flatMap(Substation::getCountry)
+                .map(country -> parameters.getCountriesToBalance().contains(country))
+                .orElse(false);
     }
 }
